# rtic-zero

./: .gitignore  Cargo.toml  LICENCE.md  README.md
app/: Cargo.toml
app/.cargo/: config.toml
app/examples/: async.rs  ex1.rs
app/src/: lib.rs  main.rs  rtic_zero.rs  rtic_zero_codegen copy.rs  rtic_zero_codegen.rs
backends/rtic-zero-cortex-m/: Cargo.toml
backends/rtic-zero-cortex-m/src/: lib.rs
backends/rtic-zero-linux/: Cargo.toml
backends/rtic-zero-risc-v/: Cargo.toml
examples/: ex1.rs
mutex/src/: lib.rs
src/: lib.rs  main.rs  priority.rs  racy_cell.rs
syntax/: Cargo.toml  out.rs  rtic.json
syntax/src/: analysis.rs  codegen.rs  io.rs  lib.rs  syntax.rs
