[package]
name = "rtic-zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "rtic_zero"

[dependencies]

[workspace]

members = [
    # Syntax analysis and codegen
    "syntax",
    # An example app
    "app",
    # mutex
    "mutex",
    # backends
    "backends/rtic-zero-cortex-m",
    # "rtic-zero-linux",
    # "rtic-zero-risc-v",
]

[dev-dependencies]
lm3s6965 = "0.1.3"

[patch.crates-io]
# lm3s6965 = { path = "../lm3s6965-1" }
lm3s6965 = { git = "https://github.com/perlindgren/lm3s6965-1.git" }
